# algorithms-practice-rs

./: Cargo.toml
array-rotate/: Cargo.toml
array-rotate/benches/: array_rotate_benchmark.rs
array-rotate/src/: lib.rs
array_rotate/: Cargo.toml
array_rotate/src/: main.rs
mathematical/: Cargo.toml
mathematical/src/: lib.rs
sorting/: Cargo.toml
sorting/benches/: merge_sort_benchmark.rs
sorting/src/: lib.rs
sorting/src/merge_sort/: mod.rs
